Avoid stickers to be cropped in height (#5060)
 - no min-width for stickers
 - no border radius for stickers

--- a/packages/frontend/scss/message/_message.scss
+++ b/packages/frontend/scss/message/_message.scss
@@ -298,6 +298,8 @@
 
   .message-attachment-media {
     background-color: transparent;
+    // no border radius for stickers
+    border-radius: 0px;
     & > .attachment-content {
       // Make space for the footer, which is `position: absolute;`.
       // However, this does not account for the case
@@ -408,6 +410,13 @@
 
     &.outgoing {
       margin-left: auto;
+    }
+    /**
+     * on small screens the limiting factor is the
+     * width not the height (except for stickers)
+     */
+    img.portrait:not(.sticker) {
+      height: auto;
     }
   }
 }
